Fix margins on small screens

--- a/src/assets/stylesheets/components/_sharebuttons.scss
+++ b/src/assets/stylesheets/components/_sharebuttons.scss
@@ -15,6 +15,7 @@
     border-radius: 4px;
     transition: 25ms ease-out;
     padding: 0.5em 0.75em;
+    margin: 0 0 0.5em;
     // font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   }
 
